Removed Dev Only labelling from 60 day death card

--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -1411,7 +1411,7 @@ cards:
 
 # not shown for UK
 
-  - heading: Deaths within 60 days of positive test (Dev Only)
+  - heading: Deaths within 60 days of positive test
     cardType: chart
     locationAware:
       included:
