deaths 28 days age sex - amended card title

--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -960,7 +960,7 @@ cards:
 
 # Only available for England and regions
 
-  - heading: Deaths within 28 days of positive test rates by age and sex
+  - heading: Death rates within 28 days of positive test by age and sex
     caption: Rates per 100,000 resident population
     cardType: ageSexBreakdown
     fullWidth: false
