--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -1,9 +1,4 @@
 #  ALL CARDS THAT USE THE ORIGINAL DEATHS METRICS ARE STILL HERE PENDING A DECISION ON WHICH METRICS WE WILL BE USING
-#  IF WE END UP WITH 60 DAY FOR ENGLAND WE WILL FEED THAT THROUGH USING THE EXISTING METRICS AND THESE CARDS WILL BE
-#  ENGLAND AND SUB-ENGLAND ONLY. 
-
-#  ONS (DEATH CERTIFICATE) DEATHS ARE IN HERE IN DEV ONLY - DATA ARE READY IF GO AHEAD IS GIVEN - JUST NEED TO REMOVE
-#  DEV ONLY MARKERS
 
 headlineNumbers:
   - caption: Deaths within 28 days of positive test
@@ -16,8 +11,6 @@ headlineNumbers:
         value: cumDeaths28DaysByPublishDate
         tooltip: Total number of deaths of people who had a positive test result and died within 28 days, reported up to {date}
 
-# {{ StartDevOnlyBlock}}
-
   - caption: Deaths with COVID-19 on the death certificate
     valueItems:
       - label: Weekly
@@ -27,8 +20,6 @@ headlineNumbers:
       - label: Total
         value: cumOnsDeathsByRegistrationDate
         tooltip: Total number of deaths where COVID-19 is mentioned as a cause on the death certificate, registered up to {date}
-
-# {{ EndDevOnlyBlock}}
 
 ##############################################################################################################################
 
@@ -348,12 +339,9 @@ cards:
     fullWidth: true
 
     abstract: > 
-
       Number of deaths of people who had had a positive test result for COVID-19 and died within 28 days
-      of the first positive test. The actual cause of death may not be COVID-19 in all cases. People who
-      died from COVID-19 but had not tested positive are not included and people who died from COVID-19
-      more than 28 days after their first positive test are not included. Data from the four nations are
-      not directly comparable as methodologies and inclusion criteria vary.
+      of the first positive test. Data from the four nations are not directly comparable as methodologies 
+      and inclusion criteria vary.
 
     download:
       - newDeaths28DaysByDeathDate
@@ -505,12 +493,9 @@ cards:
     fullWidth: true
 
     abstract: > 
-
       Number of deaths of people who had had a positive test result for COVID-19 and died within 28 days
-      of the first positive test. The actual cause of death may not be COVID-19 in all cases. People who
-      died from COVID-19 but had not tested positive are not included and people who died from COVID-19
-      more than 28 days after their first positive test are not included. Data from the four nations are
-      not directly comparable as methodologies and inclusion criteria vary.
+      of the first positive test. Data from the four nations are not directly comparable as methodologies 
+      and inclusion criteria vary.
 
     download:
       - newDeaths28DaysByPublishDate
@@ -662,10 +647,8 @@ cards:
     fullWidth: true
     abstract: > 
       Number of deaths of people who had had a positive test result for COVID-19 and died within 28 days
-      of the first positive test. The actual cause of death may not be COVID-19 in all cases. People who
-      died from COVID-19 but had not tested positive are not included and people who died from COVID-19
-      more than 28 days after their first positive test are not included. Data from the four nations are
-      not directly comparable as methodologies and inclusion criteria vary.
+      of the first positive test. Data from the four nations are not directly comparable as methodologies 
+      and inclusion criteria vary.
 
     download:
       - newDeaths28DaysByDeathDate
@@ -738,10 +721,8 @@ cards:
     fullWidth: true
     abstract: > 
       Number of deaths of people who had had a positive test result for COVID-19 and died within 28 days
-      of the first positive test. The actual cause of death may not be COVID-19 in all cases. People who
-      died from COVID-19 but had not tested positive are not included and people who died from COVID-19
-      more than 28 days after their first positive test are not included. Data from the four nations are
-      not directly comparable as methodologies and inclusion criteria vary.
+      of the first positive test. Data from the four nations are not directly comparable as methodologies 
+      and inclusion criteria vary.
     
     download:
       - newDeaths28DaysByPublishDate
@@ -801,21 +782,14 @@ cards:
 
 ##############################################################################################################################
 
-# {{ StartDevOnlyBlock}}
-
   - heading: Weekly deaths with COVID-19 on the death certificate by date registered
     cardType: chart
-    # locationAware:
-    #   excluded:
-    #     areaType:
-    #       - overview
 
     fullWidth: true
     abstract: > 
       Number of deaths of people whose death certificate mentioned COVID-19 as one of the causes.
-      The underlying cause of death may not be COVID-19 in all cases. Some of the deceased had not
-      had a positive test result. The data are published weekly by the ONS, NRS and NISRA and there
-      is a lag in reporting of at least 11 days because the data are based on death registrations.
+      The data are published weekly by the ONS, NRS and NISRA and there is a lag in reporting of 
+      at least 11 days because the data are based on death registrations.
     
     download:
       - newOnsDeathsByRegistrationDate
@@ -865,8 +839,6 @@ cards:
         tabType: metadata
         filename: cardMetadata/deaths/cardOnsDeathsTimeSeries.md
 
-# {{ EndDevOnlyBlock}}
-
 ##############################################################################################################################
 
 # Only available for England and regions
@@ -883,7 +855,7 @@ cards:
   
     fullWidth: false
     abstract: >
-      Total number of deaths within 28 days of positive test since the start of the pandemic, by age and sex.
+      Total number of deaths within 28 days of first positive test since the start of the pandemic, by age and sex.
 
     download:
       - femaleDeaths28Days
@@ -965,8 +937,8 @@ cards:
     cardType: ageSexBreakdown
     fullWidth: false
     abstract: >
-      Total death within 28 days of positive test rates by age and sex. There are fewer people in the oldest age groups so the
-      rates show the relative impact on different age groups.
+      Total death within 28 days of first positive test rates by age and sex. There are fewer people in the 
+      oldest age groups so the rates show the relative impact on different age groups.
 
     download:
       - femaleDeaths28Days
@@ -1162,16 +1134,14 @@ cards:
 
 ##############################################################################################################################
 
-  - heading: Deaths within 28 days of positive test
+  - heading: Deaths within 28 days of positive test by area
     cardType: simpleTableStatic
     fullWidth: false
     abstract: >
       Total number of deaths since the start of the pandemic of people who had had a positive test result
-      for COVID-19 and died within 28 days of the first positive test. The actual cause of death may not
-      be COVID-19 in all cases. People who died from COVID-19 but had not tested positive are not included
-      and people who died from COVID-19 more than 28 days after their first positive test are not included.
-      Data from the four nations are not directly comparable as methodologies and inclusion criteria vary.
-      Only data available for the latest reported date are shown.
+      for COVID-19 and died within 28 days of the first positive test. Data from the four nations are not 
+      directly comparable as methodologies and inclusion criteria vary. Only data available for the latest 
+      reported date are shown.
 
     download:
       - cumDeaths28DaysByPublishDate
@@ -1196,7 +1166,7 @@ cards:
           - label: Deaths
             value: cumDeaths28DaysByPublishDate
             type: numeric
-            tooltip: Cumulative total number of deaths of people resident in each area up to {date}
+            tooltip: Cumulative total number of deaths within 28 days of positive test of people resident in each area up to {date}
 
           - label: Rate per 100,000 population
             value: cumDeaths28DaysByPublishDateRate
@@ -1221,7 +1191,7 @@ cards:
           - label: Deaths
             value: cumDeaths28DaysByPublishDate
             type: numeric
-            tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
+            tooltip: Cumulative total number of deaths within 28 days of positive test of people resident in each area up to {date}
 
           - label: Rate per 100,000 population
             value: cumDeaths28DaysByPublishDateRate
@@ -1246,7 +1216,7 @@ cards:
           - label: Deaths
             value: cumDeaths28DaysByPublishDate
             type: numeric
-            tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
+            tooltip: Cumulative total number of deaths within 28 days of positive test of people resident in each area up to {date}
 
           - label: Rate per 100,000 population
             value: cumDeaths28DaysByPublishDateRate
@@ -1271,7 +1241,7 @@ cards:
           - label: Deaths
             value: cumDeaths28DaysByPublishDate
             type: numeric
-            tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
+            tooltip: Cumulative total number of deaths within 28 days of positive test of people resident in each area up to {date}
 
           - label: Rate per 100,000 population
             value: cumDeaths28DaysByPublishDateRate
@@ -1284,17 +1254,14 @@ cards:
 
 ##############################################################################################################################
 
-# {{ StartDevOnlyBlock}}
-
-  - heading: Deaths with COVID-19 on the death certificate
+  - heading: Deaths with COVID-19 on the death certificate by area
     cardType: simpleTableStatic
     fullWidth: false
     abstract: >
       Total number of deaths since the start of the pandemic of people whose death certificate mentioned
-      COVID-19 as one of the causes. The underlying cause of death may not be COVID-19 in all cases. Some
-      of the deceased had not had a positive test result. Only data available for the latest reported
-      date are shown.  The data are published weekly by the ONS, NRS and NISRA and there is a lag in
-      reporting of at least 11 days because the data are based on death registrations.
+      COVID-19 as one of the causes. The data are published weekly by the ONS, NRS and NISRA and there is 
+      a lag in reporting of at least 11 days because the data are based on death registrations. Only data 
+      available for the latest reported date are shown. 
 
     download:
       - cumOnsDeathsByRegistrationDate
@@ -1319,7 +1286,7 @@ cards:
           - label: Deaths
             value: cumOnsDeathsByRegistrationDate
             type: numeric
-            tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
+            tooltip: Cumulative total number of deaths where COVID-19 is mentioned as a cause on the death certificate of people resident in each area up to {date}
 
           - label: Rate per 100,000 population
             value: cumOnsDeathsByRegistrationDateRate
@@ -1344,7 +1311,7 @@ cards:
           - label: Deaths
             value: cumOnsDeathsByRegistrationDate
             type: numeric
-            tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
+            tooltip: Cumulative total number of deaths where COVID-19 is mentioned as a cause on the death certificate of people resident in each area up to {date}
 
           - label: Rate per 100,000 population
             value: cumOnsDeathsByRegistrationDateRate
@@ -1369,7 +1336,7 @@ cards:
           - label: Deaths
             value: cumOnsDeathsByRegistrationDate
             type: numeric
-            tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
+            tooltip: Cumulative total number of deaths where COVID-19 is mentioned as a cause on the death certificate of people resident in each area up to {date}
 
           - label: Rate per 100,000 population
             value: cumOnsDeathsByRegistrationDateRate
@@ -1394,7 +1361,7 @@ cards:
           - label: Deaths
             value: cumOnsDeathsByRegistrationDate
             type: numeric
-            tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
+            tooltip: Cumulative total number of deaths where COVID-19 is mentioned as a cause on the death certificate of people resident in each area up to {date}
 
           - label: Rate per 100,000 population
             value: cumOnsDeathsByRegistrationDateRate
@@ -1404,8 +1371,6 @@ cards:
       - heading: About 
         tabType: metadata
         filename: cardMetadata/deaths/cardOnsDeathsAndRatesByArea.md
-
-# {{ EndDevOnlyBlock}}
 
 ##############################################################################################################################
 
@@ -1428,9 +1393,7 @@ cards:
     fullWidth: true
     abstract: > 
       Number of deaths of people who had had a positive test result for COVID-19 and either died within 
-      60 days of the first positive test or have COVID-19 mentioned on their death certificate. The actual cause 
-      of death may not be COVID-19 in all cases. People who died from COVID-19 but had not tested positive 
-      are not included. 
+      60 days of the first positive test or have COVID-19 mentioned on their death certificate. 
 
     download:
       - newDeaths60DaysByDeathDate
@@ -1661,8 +1624,8 @@ cards:
     cardType: ageSexBreakdown
     fullWidth: false
     abstract: >
-      Total death within 60 days of positive test rates by age and sex. There are fewer people in the oldest age groups so the
-      rates show the relative impact on different age groups.
+      Total deaths within 60 days of positive test rates by age and sex. There are fewer people in the oldest age 
+      groups so the rates show the relative impact on different age groups.
 
     download:
       - femaleDeaths60Days
