--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1225,3 +1225,36 @@ cards:
       - heading: About
         tabType: metadata
         filename: cardMetadata/cases/cardCasesAndRatesByArea.md
+
+##############################################################################################################################
+
+  - heading: Cases and case rates by local area in England
+    cardType: simpleExternalStatic
+
+    fullWidth: false
+    abstract: >
+      A new interactive map is available in our experimental dashboard release. 
+      Browse case rates for the most recent 7 day period and how these have changed 
+      over time. 
+
+    image: 
+      url: https://c19pubdev.azureedge.net/assets/images/msoa-outline.png
+      alt: >
+        Outline of the Middle Super Output Area (MSOA) map
+        boundaries (not data included)
+    resource: 
+      label: View map
+      url: https://coronavirus-staging.data.gov.uk/details/interactive-map
+      
+    download:
+      - format: CSV
+        url: https://coronavirus.data.gov.uk/downloads/msoa_data/MSOAs_latest.csv
+      
+      - format: JSON
+        url: https://coronavirus.data.gov.uk/downloads/msoa_data/MSOAs_latest.json
+      
+      - format: XML
+        url: https://coronavirus.data.gov.uk/downloads/msoa_data/MSOAs_latest.xml
+
+      - format: Spreadsheet
+        url: https://coronavirus.data.gov.uk/downloads/msoa_data/MSOAs_latest.xlsx
