--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1233,9 +1233,10 @@ cards:
 
     fullWidth: false
     abstract: >
-      A new interactive map is available in our experimental dashboard release. 
-      Browse case rates for the most recent 7 day period and how these have changed 
-      over time. 
+      A new interactive map is available in the experimental release of the 
+      coronavirus dashboard service. Browse case rates in local areas for the 
+      most recent 7 day period and how these have changed over time and 
+      explore other new features in the experimental release (opens in new window). 
 
     image: 
       url: https://c19pubdev.azureedge.net/assets/images/msoa-outline.png
