--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1102,6 +1102,136 @@ cards:
 
 ##############################################################################################################################
 
+# {{ StartDevOnlyBlock }}
+
+  - heading: Seven day case counts and rates by area (dev only)
+    cardType: simpleTableStatic
+    fullWidth: false
+    abstract: >
+      Total number of people with at least one lab-confirmed positive COVID-19 test result in the most 
+      recent seven day period for which data are considered to be complete. The rates per 100,000 resident 
+      population give a fairer comparison of the number of cases in each area but they do not take account 
+      of the different rates of testing or differences in the age and sex of the local populations. 
+
+    download:
+      - newCasesBySpecimenDateRollingSum
+      - newCasesBySpecimenDateRollingRate
+
+    tabs:
+      - heading: Nation
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: nation
+
+        latestBy: newCasesBySpecimenDateRollingRate
+        sortBy: areaName
+
+        fields:
+          - label: Area
+            value: areaName
+            type: string
+            tooltip: ""
+
+          - label: Cases
+            value: newCasesBySpecimenDateRollingSum
+            type: numeric
+            tooltip: Total number of people tested positive in the seven day period ending {date-5}
+
+          - label: Rate per 100,000 population
+            value: newCasesBySpecimenDateRollingRate
+            type: numeric
+            tooltip: Rate of total number of people tested positive in the seven day period per 100,000 resident population
+
+      - heading: Region
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: region
+
+        latestBy: newCasesBySpecimenDateRollingRate
+        sortBy: areaName
+
+        fields:
+          - label: Area
+            value: areaName
+            type: string
+            tooltip: ""
+
+          - label: Cases
+            value: newCasesBySpecimenDateRollingSum
+            type: numeric
+            tooltip: Total number of people tested positive in the seven day period ending {date-5}
+
+          - label: Rate per 100,000 population
+            value: newCasesBySpecimenDateRollingRate
+            type: numeric
+            tooltip: Rate of total number of people tested positive in the seven day period per 100,000 resident population
+
+      - heading: Upper tier LA
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: utla
+
+        latestBy: newCasesBySpecimenDateRollingRate
+        sortBy: areaName
+        searchBy: areaName
+
+        fields:
+          - label: Area
+            value: areaName
+            type: string
+            tooltip: ""
+
+          - label: Cases
+            value: newCasesBySpecimenDateRollingSum
+            type: numeric
+            tooltip: Total number of people tested positive in the week ending {date-5}
+
+          - label: Rate per 100,000 population
+            value: newCasesBySpecimenDateRollingRate
+            type: numeric
+            tooltip: Rate of total number of people tested positive in the seven day period per 100,000 resident population
+
+      - heading: Lower tier LA
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: ltla
+
+        latestBy: newCasesBySpecimenDateRollingRate
+        sortBy: areaName
+        searchBy: areaName
+
+        fields:
+          - label: Area
+            value: areaName
+            type: string
+            tooltip: ""
+
+          - label: Cases
+            value: newCasesBySpecimenDateRollingSum
+            type: numeric
+            tooltip: Total number of people tested positive in the seven day period ending {date-5}
+
+          - label: Rate per 100,000 population
+            value: newCasesBySpecimenDateRollingRate
+            type: numeric
+            tooltip: Rate of total number of people tested positive in the seven day period per 100,000 resident population
+
+      - heading: About
+        tabType: metadata
+        filename: cardMetadata/cases/cardSevenDayCasesAndRatesByArea.md
+
+# {{ EndDevOnlyBlock }}
+
+##############################################################################################################################
+
   - heading: Cases by area
     cardType: simpleTableStatic
     fullWidth: false
