--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1114,7 +1114,7 @@ cards:
       of the different rates of testing or differences in the age and sex of the local populations. 
 
     download:
-      - newCasesBySpecimenDateRollingSum
+#      - newCasesBySpecimenDateRollingSum
       - newCasesBySpecimenDateRollingRate
 
     tabs:
@@ -1134,10 +1134,10 @@ cards:
             type: string
             tooltip: ""
 
-          - label: Cases
-            value: newCasesBySpecimenDateRollingSum
-            type: numeric
-            tooltip: Total number of people tested positive in the seven day period ending {date-5}
+#          - label: Cases
+#            value: newCasesBySpecimenDateRollingSum
+#            type: numeric
+#            tooltip: Total number of people tested positive in the seven day period ending {date-5}
 
           - label: Rate per 100,000 population
             value: newCasesBySpecimenDateRollingRate
@@ -1160,10 +1160,10 @@ cards:
             type: string
             tooltip: ""
 
-          - label: Cases
-            value: newCasesBySpecimenDateRollingSum
-            type: numeric
-            tooltip: Total number of people tested positive in the seven day period ending {date-5}
+#          - label: Cases
+#            value: newCasesBySpecimenDateRollingSum
+#            type: numeric
+#            tooltip: Total number of people tested positive in the seven day period ending {date-5}
 
           - label: Rate per 100,000 population
             value: newCasesBySpecimenDateRollingRate
@@ -1187,10 +1187,10 @@ cards:
             type: string
             tooltip: ""
 
-          - label: Cases
-            value: newCasesBySpecimenDateRollingSum
-            type: numeric
-            tooltip: Total number of people tested positive in the week ending {date-5}
+#          - label: Cases
+#            value: newCasesBySpecimenDateRollingSum
+#            type: numeric
+#            tooltip: Total number of people tested positive in the week ending {date-5}
 
           - label: Rate per 100,000 population
             value: newCasesBySpecimenDateRollingRate
@@ -1214,10 +1214,10 @@ cards:
             type: string
             tooltip: ""
 
-          - label: Cases
-            value: newCasesBySpecimenDateRollingSum
-            type: numeric
-            tooltip: Total number of people tested positive in the seven day period ending {date-5}
+#          - label: Cases
+#            value: newCasesBySpecimenDateRollingSum
+#            type: numeric
+#            tooltip: Total number of people tested positive in the seven day period ending {date-5}
 
           - label: Rate per 100,000 population
             value: newCasesBySpecimenDateRollingRate
