Amended phrasing from PCR to virus tests and included lab-based throughout abstracts and tooltips

--- a/Layouts/UKSummary.yaml
+++ b/Layouts/UKSummary.yaml
@@ -2,7 +2,7 @@ summary:
   - heading: Testing
     fields:
 
-      - caption: PCR testing capacity
+      - caption: Virus testing capacity
         chart:
           value: plannedPCRCapacityByPublishDate
           type: line
@@ -13,9 +13,9 @@ summary:
         
         valueItems: 
           - value: plannedPCRCapacityByPublishDate
-            tooltip: Estimated PCR testing capacity for {date}
+            tooltip: Estimated virus testing capacity for {date}
 
-      - caption: PCR tests processed
+      - caption: Virus tests processed
         chart:
           value: newPCRTestsByPublishDate
           type: line
@@ -27,11 +27,11 @@ summary:
         valueItems: 
           - label: Daily
             value: newPCRTestsByPublishDate
-            tooltip: Daily number of PCR swab tests processed, reported on {date} - chart shows 7-day rolling average
+            tooltip: Daily number of virus tests processed, reported on {date} - chart shows 7-day rolling average
           
           - label: Total
             value: cumPCRTestsByPublishDate
-            tooltip: Cumulative total number of PCR swab tests processed, reported up to {date}
+            tooltip: Cumulative total number of virus tests processed, reported up to {date}
 
 ##############################################################################################################################
 
